# battlemon-ethereum

./: .dockerignore  .env  .gitignore  Cargo.toml  docker-compose.yml  sqlx-data.json
.cargo/: audit.toml
.github/workflows/: audit-on-push.yml  audit.yml  ci.yml  format.yml
config/: base.toml  example.toml  local.toml
docker/: project.Dockerfile
migrations/: 20230430090825_create_users_table.sql
src/: address.rs  config.rs  jwt.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: auth.rs  healthcheck.rs  mod.rs  users.rs
tests/: auth.rs  first_test.rs  healthcheck.rs  helpers.rs  nonce.rs
