[package]
name = "battlemon-ethereum"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
# server
axum = { version = "0.6.16", features = ["http2", "ws", "macros", "headers"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace", "request-id", "util"] }
hyper = { version = "0.14.26", features = ["server"] }
# error handling
eyre = "0.6.8"
thiserror = "1.0.40"
# logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
# database
sqlx = { version = "0.6.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "migrate", "offline", "decimal", "json", "uuid"] }
# serialization
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
# configuration
config = { version = "0.13.3", default-features = false, features = ["toml"] }
# web3
ethers = "2.0.4"
# security
secrecy = { version = "0.8.0", features = ["serde"] }
jsonwebtoken = "8.3.0"
# cryptography
ring = "0.16.20"
base64 = "0.21.0"
# other
uuid = { version = "1.3.1", features = ["v4", "serde"] }
strum = { version = "0.24.1", features = ["derive"] }
chrono = "0.4.24"

[dev-dependencies]
once_cell = "1.17.1"
siwe = "0.5.0"
